<resources>
    <!--General-->
    <string name="app_name">InRecovery</string>
    <!--Activity Bienvenida-->
    <string name="bienvenido">-Bienvenido-</string>
    <string name="necesitorecuperacion">¿Necesito recuperación?</string>
    <string name="aplicacionpensada1">Aplicación pensada en la</string>
    <string name="aplicacionpensada2">RECUPERACIÓN</string>
    <string name="aplicacionpensada3">DE ADICCIONES.</string>
    <string name="nuevo">Soy nuevo</string>
    <string name="veterano">Ingresar</string>
    <string name="info">Esta es una aplicación de cooperación y no afiliación con herramientas complementarias a los programas de 12 pasos. Se ha demostrado que técnicas no farmacológicas que incluyen terapias grupales que utilizan técnicas de 12 pasos, cognitivo-conductuales y motivacionales, ayudan a reforzar comportaminetos sociales que modulan el cerebro adicto y ayudan a su recuperacion y el equilibrio neurobiológico.</string>
    <string name="basado1">Basado en el programa</string>
    <string name="basado2">12 pasos</string>
    <!--Activity Seleccion-->
    <string name="soyadicto">¿Soy Adicto a?</string>
    <string name="estoylisto">¿Estoy listo para comenzar la recuperación?</string>
    <string name="autodiagnostico">Autodiagnóstico</string>
    <string-array name="adicciones">
        <item>Drogas</item>
        <item>Trabajo</item>
        <item>Deudas</item>
        <item>Neurosis</item>
        <item>Sexo y Amor</item>
    </string-array>
    <string name="drogas">Drogas</string>
    <string name="trabajo">Trabajo</string>
    <string name="deudas">Deudas</string>
    <string name="neurosis">Neurosis</string>
    <string name="sexoyamor">Sexo y amor</string>
    <!--Activity Diagnostico-->
    <string name="si">Si</string>
    <string name="no">No</string>
    <string name="diagnostico0">¿Soy Adicto a las Drogas?</string>
    <string name="diagnostico1">¿Soy Adicto al Trabajo?</string>
    <string name="diagnostico2">¿Soy Adicto a las Deudas?</string>
    <string name="diagnostico3">¿Soy Adicto a la Neurosis?</string>
    <string name="diagnostico4">¿Soy Adicto al Sexo y el Amor?</string>
    <string name="enlace_diagnostico0">Basado en el cuestionario de Narcóticos Anónimos.</string>
    <string name="enlace_diagnostico1">Basado en el cuestionario de Trabajo-Adictos Anónimos.</string>
    <string name="enlace_diagnostico2">Basado en el cuestionario de Deudores Anónimos.</string>
    <string name="enlace_diagnostico3">Basado en el cuestionario de Neuróticos Anónimos.</string>
    <string name="enlace_diagnostico4">Basado en el cuestionario de Adictos al Sexo y el Amor Anónimos.</string>
    <string name="resp1">Responder </string>
    <string name="resp2"> preguntas con respuestas positivas podrían indicar presencia de adicción</string>
    <string name="nresp0">5</string>
    <string name="nresp1">3</string>
    <string name="nresp2">8</string>
    <string name="nresp3">4</string>
    <string name="nresp4">10</string>
    <string name="admito">Lo admito, soy adicto, continuemos.</string>
    <string name="nocontinuemos">No deseo contestar todo, continuemos.</string>
    <!--Activity Resultado Positivo-->
    <string name="podria">Podría ser:</string>
    <string name="adicto0">Adicto a las Drogas.</string>
    <string name="adicto1">Adicto al Trabajo.</string>
    <string name="adicto2">Adicto a las Deudas.</string>
    <string name="adicto3">Adicto a la Neurosis.</string>
    <string name="adicto4">Adicto al Sexo y Amor.</string>
    <string name="existen">Existen herramientas para el cambio de hábitos mentales, conductuales obsesivos y compulsivos autodestructivos.</string>
    <string name="teatreves">¿Te atreves al cambio?</string>
    <string name="quedeseas">¿Que deseas hacer?</string>
    <string name="siquiero">Quiero empezar mi recuperación.</string>
    <string name="denuevo">Realizar el diagnóstico de nuevo.</string>
    <string name="noquiero">No gracias, por ahora no.</string>
    <!--Activity Resultado Negativo-->
    <string name="probablemente">Probablemente no eres:</string>
    <string name="otro">Realizar otro auto-diagnóstico.</string>
    <!--Activity Herramientas-->
    <string name="inventariodiario">Inventario Diario:</string>
    <string name="puntosobtenidos">Puntos Obtendos:</string>

    <!--Activity Menu Herrmianetas-->
    <string name="adiccion0">Drogas</string>
    <string name="adiccion1">Trabajo</string>
    <string name="adiccion2">Deudas</string>
    <string name="adiccion3">Neurosis</string>
    <string name="adiccion4">Sexo y Amor</string>
    <string name="herramientasrecuperacion">Herramientas de Recuperación:</string>
    <!--Activity Resumen Herrmianetas-->
    <string name="literatura">Literatura Recomendada</string>
    <!--Activity IncioSesion-->
    <string name="iniciarsesion">Iniciar Sesión</string>
    <string name="iniciar">Iniciar</string>
    <!--Activity Registro-->
    <string name="registro">Registro</string>
    <string name="nombre">Nombre:</string>
    <string name="contrasena">Contraseña:</string>
    <string name="edad">Edad:</string>
    <string name="sexo">Sexo:</string>
    <string name="registrarme">Registrarme</string>
    <string name="hombre">Hombre</string>
    <string name="mujer">Mujer</string>
    <string name="disclaimer">Los datos aquí registrados son solo para uso interno de la aplicación. En caso de ser usados en trabajos de investigación serón tratado anónimamente. </string>
    <string-array name="edades">
        <item>10-15</item>
        <item>15-20</item>
        <item>20-25</item>
        <item>25-30</item>
        <item>30-35</item>
        <item>35-40</item>
        <item>40-45</item>
        <item>45-50</item>
        <item>50-55</item>
        <item>55-60</item>
        <item>60-65</item>
        <item>65-70</item>
        <item>70-75</item>
        <item>75-80</item>
        <item>80-85</item>
        <item>85...</item>
    </string-array>
    <!--Activity Glosario-->
    <string name="glosario">Glosario</string>
    <string name="Saltar">Saltar</string>
    <string name="Siguiente">Siguiente</string>
    <string name="ok">Ok</string>
    <!--Activity Configuracion-->
    <string name="configurar">Configuraciones</string>
    <string name="activar">Activar Notificaciones:</string>
    <string name="sonido">Sonido:</string>
    <string name="hora">Hora:</string>
    <string name="cambiarn">Cambiar Nombre</string>
    <string name="cambiarc">Cambiar Contrasena</string>
    <!--Activity Historial-->
    <string name="estadisticas">Estadísticas</string>
    <string name="dias1">Días sin caer en la adicción:</string>
    <string name="dias2">Días utilizando InRecovery:</string>
    <string name="puntajetotal">Puntaje Total</string>
    <!--Activity Puntaje-->
    <string name="puntos">Puntos</string>
    <string name="regresar">Regresar</string>
    <string name="lohice">Lo Hice</string>
    <!--Mensajes aliento-->
    <string name="mensaje1">Vas muy bien, la recuperación esta presente.</string>
    <!--Otros-->
    <string name="nombre_usuario">Nombre Cualquiera</string>
    <string name="pass_usuario">123456</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="TituloFragmnet">Herramienta</string>
</resources>
