<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.sinapsis.inrecovery.ResultadoPositivo"
    android:background="@color/background4">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/podria"
        android:textSize="@dimen/titulo_normal"
        android:textColor="@color/colorGris1"
        />
    <TextView
        android:id="@+id/soyadicto"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/adicto0"
        android:textSize="@dimen/titulo_normal"
        android:gravity="center"
        android:textColor="@color/colorGris1"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:text="@string/existen"
        android:textColor="@color/colorGris1"
        android:textSize="@dimen/titulo_pequenio"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/teatreves"
        android:textColor="@color/colorGris1"
        android:textSize="@dimen/titulo_normal"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/quedeseas"
        android:textColor="@color/colorGris1"
        android:textSize="@dimen/titulo_normal"
        android:gravity="center"
        />
    <Button
        android:id="@+id/siquiero"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:text="@string/siquiero"
        android:background="@color/colorBotones4"
        android:textSize="@dimen/boton_mediano"
        android:layout_marginTop="@dimen/espacio_pequnio"
        android:layout_marginBottom="@dimen/espacio_pequnio"
        android:onClick="Button_Click"/>
    <Button
        android:id="@+id/denuevo"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:text="@string/denuevo"
        android:background="@color/colorBotones5"
        android:textSize="@dimen/boton_mediano"
        android:layout_marginTop="@dimen/espacio_pequnio"
        android:layout_marginBottom="@dimen/espacio_pequnio"
        android:onClick="Button_Click"/>
    <Button
        android:id="@+id/noquiero"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:text="@string/noquiero"
        android:background="@color/colorBotones6"
        android:textSize="@dimen/boton_mediano"
        android:layout_marginTop="@dimen/espacio_pequnio"
        android:layout_marginBottom="@dimen/espacio_pequnio"
        android:onClick="Button_Click"/>
</LinearLayout>
