<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.sinapsis.inrecovery.ResultadoNegativo">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/probablemente"
        android:textSize="@dimen/titulo_normal"
        android:gravity="center_vertical"
        android:textColor="@color/colorGris1"
        />
    <TextView
        android:id="@+id/soyadicto"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/adicto0"
        android:textSize="@dimen/titulo_normal"
        android:gravity="center"
        android:textColor="@color/colorGris1"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/quedeseas"
        android:textColor="@color/colorGris1"
        android:textSize="@dimen/titulo_normal"
        android:gravity="center"
        />
    <Button
        android:id="@+id/denuevo"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:text="@string/denuevo"
        android:background="@color/colorBotones8"
        android:textSize="@dimen/boton_mediano"
        android:layout_marginTop="@dimen/espacio_pequenio"
        android:layout_marginBottom="@dimen/espacio_pequenio"
        android:onClick="Button_Click"/>
    <Button
        android:id="@+id/noquiero"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:text="@string/noquiero"
        android:background="@color/colorBotones9"
        android:textSize="@dimen/boton_mediano"
        android:layout_marginTop="@dimen/espacio_pequenio"
        android:layout_marginBottom="@dimen/espacio_pequenio"
        android:layout_marginLeft="@dimen/espacio_mediano"
        android:layout_marginRight="@dimen/espacio_mediano"
        android:onClick="Button_Click"/>
</LinearLayout>
