<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.sinapsis.inrecovery.Configuracion">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/configurar"
        android:gravity="center"
        android:textSize="@dimen/titulo_normal"
        />

        <Switch
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:text="@string/activar"
            android:id="@+id/switch_notificaciones"
            android:textSize="@dimen/boton_mediano"
            android:layout_weight="1"
            />
    <Switch
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="@string/sonido"
        android:id="@+id/switch_sonido"
        android:textSize="@dimen/boton_mediano"
        android:layout_weight="1"
        />
    <TimePicker
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        >
    </TimePicker>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

    </LinearLayout>

</LinearLayout>