<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.sinapsis.inrecovery.Diagnostico">
    <LinearLayout
        android:id="@+id/cabecera_diagnostico"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:orientation="vertical"
        android:background="@color/colornarc_anon">
    <TextView
    android:id="@+id/diagnostico"
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="1"
    android:gravity="center"
    android:text="@string/diagnostico0"
    android:textColor="@color/colorNegro"
    android:textSize="@dimen/titulo_normal"
    />
    <TextView
        android:id="@+id/enlace_diagnostico"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/enlace_diagnostico0"
        android:textColor="@color/colorGris1"
        android:textSize="@dimen/texto_normal"
        android:onClick="EnlaceWeb"
        />
    <LinearLayout
        android:layout_weight="2"
        android:layout_height="0dp"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.5"
            android:gravity="center"
            android:text="@string/resp1"
            android:textColor="@color/colorGris1"
            android:textSize="@dimen/texto_normal"
            />
        <TextView
            android:id="@+id/n_preguntas"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.4"
            android:gravity="center"
            android:text="0"
            android:textColor="@color/colorGris1"
            android:textSize="@dimen/texto_normal"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:gravity="center"
            android:text="@string/resp2"
            android:textColor="@color/colorGris1"
            android:textSize="@dimen/texto_normal"
            />
    </LinearLayout>
    </LinearLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="8"
        android:id="@+id/scrolldiagnostico">
        <LinearLayout
            android:id="@+id/contenedor_diagnostico"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            />
    </ScrollView>
    <LinearLayout
        android:id="@+id/conteo"
        android:layout_weight="1"
        android:layout_height="0dp"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:background="@color/colornarc_anon2"
        >
        <TextView
            android:id="@+id/Si"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/si"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/titulo_normal"
            />
        <TextView
            android:id="@+id/n_si"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="0"
            android:textColor="@color/colorGris2"
            android:textSize="@dimen/titulo_normal"

            />
        <TextView
            android:id="@+id/No"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/no"
            android:textColor="@color/colorRojo"
            android:textSize="@dimen/titulo_normal"
            />
        <TextView
            android:id="@+id/n_no"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="0"
            android:textColor="@color/colorGris2"
            android:textSize="@dimen/titulo_normal"
            />
        <ImageView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:src="@android:drawable/arrow_down_float"
            android:onClick="ImageClick"/>
    </LinearLayout>
</LinearLayout>
