<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.sinapsis.inrecovery.MenuHerramientas"
    android:background="@color/background3">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.8"
        android:text="@string/app_name"
        android:gravity="center"
        android:textSize="@dimen/titulo_grande"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:background="@color/colorPrimary"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/herramientasrecuperacion"
        android:gravity="center"
        android:textSize="@dimen/texto_grande"
        android:textColor="@color/colorNegro"
        />
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="6"
        android:paddingBottom="@dimen/espacio_mediano"
      >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:orientation="horizontal"
            >
            <ImageView
                android:id="@+id/imagen_adiccion0"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:src="@drawable/icono_drogas"
                android:background="@drawable/menusuperior1"
                android:onClick="Herramienta_click"
                android:layout_marginRight="@dimen/espacio_pequenio"
                android:layout_marginEnd="@dimen/espacio_pequenio"
                android:paddingTop="@dimen/espacio_mediano"/>
            <ImageView
                android:id="@+id/imagen_adiccion4"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:layout_width="0dp"
                android:src="@drawable/icono_sexoyamor"
                android:background="@drawable/menusuperior2"
                android:onClick="Herramienta_click"
                android:paddingTop="@dimen/espacio_mediano"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginBottom="@dimen/espacio_pequenio">
            <Button
                android:layout_height="match_parent"
                android:layout_width="0dp"
                style="@android:style/ButtonBar"
                android:id="@+id/adiccion0"
                android:text="@string/adiccion0"
                android:layout_weight="1"
                android:textSize="@dimen/boton_mediano"
                android:background="@color/background2"
                android:textColor="@color/white"
                android:onClick="Herramienta_click"
                android:layout_marginRight="@dimen/espacio_pequenio"
                android:layout_marginEnd="@dimen/espacio_pequenio"
                />
            <Button
                android:layout_height="match_parent"
                android:layout_width="0dp"
                style="@android:style/ButtonBar"
                android:id="@+id/adiccion4"
                android:text="@string/adiccion4"
                android:layout_weight="1"
                android:textSize="@dimen/boton_mediano"
                android:background="@color/background4"
                android:textColor="@color/white"
                android:onClick="Herramienta_click"
               />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2">
            <ImageView
                android:layout_height="match_parent"
                android:layout_width="0dp"
                android:id="@+id/imagen_adiccion1"
                android:layout_weight="1"
                android:src="@drawable/icono_trabajo"
                android:background="@color/background4"
                android:onClick="Herramienta_click"
                android:layout_marginRight="@dimen/espacio_pequenio"
                android:layout_marginEnd="@dimen/espacio_pequenio"
                android:paddingTop="@dimen/espacio_mediano"/>
            <ImageView
                android:layout_height="match_parent"
                android:layout_width="0dp"
                android:id="@+id/imagen_adiccion2"
                android:layout_weight="1"
                android:src="@drawable/icono_deudas"
                android:background="@color/background2"
                android:paddingTop="@dimen/espacio_mediano"/>
        </LinearLayout>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="1"
    android:layout_marginBottom="@dimen/espacio_pequenio">
    <Button
        android:layout_height="match_parent"
        android:layout_width="0dp"
        style="@android:style/ButtonBar"
        android:id="@+id/adiccion1"
        android:layout_weight="1"
        android:text="@string/adiccion1"
        android:textSize="@dimen/boton_mediano"
        android:background="@color/background4"
        android:textColor="@color/white"
        android:layout_marginRight="@dimen/espacio_pequenio"
        android:layout_marginEnd="@dimen/espacio_pequenio"
        />
    <Button
        android:layout_height="match_parent"
        android:layout_width="0dp"
        style="@android:style/ButtonBar"
        android:id="@+id/adiccion2"
        android:layout_weight="1"
        android:text="@string/adiccion2"
        android:textSize="@dimen/boton_mediano"
        android:background="@color/background2"
        android:textColor="@color/white"
        />
</LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2">
            <ImageView
                android:layout_height="match_parent"
                android:layout_width="0dp"
                android:id="@+id/imagen_adiccion3"
                android:layout_weight="1"
                android:src="@drawable/icono_neurosis"
                android:background="@color/background4"
                android:paddingTop="@dimen/espacio_mediano"
                android:paddingBottom="@dimen/espacio_pequenio"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@drawable/menuinferior">
            <Button
                android:layout_height="match_parent"
                android:layout_width="0dp"
                style="@android:style/ButtonBar"
                android:id="@+id/adiccion3"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:text="@string/adiccion3"
                android:textSize="@dimen/boton_mediano"
                android:textColor="@color/white"
                />
        </LinearLayout>

    </TableLayout>



</LinearLayout>
